<resources>
    <string name="app_name">Pro-Diction</string>
    <string name="SERVER_CLIENT_ID">1016660677235-epa63ipq5lp6ppeiih7vkpuug8pdjho4.apps.googleusercontent.com</string>
    <string name="sign_in">Continue with Google</string>
    <string name="login_text1">For your proper diction</string>
    <string name="login_text2">\'Pro-Diction\'</string>
    <string name="onboarding_1_title">Please enter your age.</string>
    <string name="onboarding_1_sub">recommendations for frequently used words to make learning more fun!</string>
    <string name="onboarding_1_btn">Next</string>
    <string name="skip"><u>Skip></u></string>
    <string name="onboarding_2_title">Skill test</string>
    <string name="onboarding_2_sub">Take the test and receive a recommendation for a level that matches your skills.</string>
    <string name="onboarding_2_btn">Take the Test</string>
    <string name="onboarding_2_1_btn_text">After pressing the Icon, read it!</string>
    <string name="onboarding_2_1_btn_finish">View Level</string>
    <string name="onboarding_finish">Report</string>
    <string name="onboarding_finish_btn">Start</string>
    <string name="learn_sub">Learn at a level that suits you!</string>
    <string name="learn_search">Search for pronunciation</string>
    <string name="learn_1">Phoneme</string>
    <string name="learn_2">Syllable</string>
    <string name="learn_3">Word</string>
    <string name="learn_4">Phrase</string>
    <string name="learn_5">Sentense</string>
    <string name="consonant">Consonant</string>
    <string name="vowels">Vowels</string>
    <string name="syllable_sub">Change your vowels</string>
    <string name="retest"><u>Take the level test></u></string>
    <string name="word_list">Vocabulary book</string>
    <string name="support">Support</string>
    <string name="center">107 Hand-rolling Center</string>
    <string name="language_setting">Language</string>
    <string name="my">Privacy</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Withdrawal</string>
    <string name="now">You\'re at the</string>
    <string name="level">stage</string>
    <string name="media_url_mp4_v1">https://storage.googleapis.com/prodiction-bucket/diction_video_v1/</string>
    <string name="media_url_mp4_v2">https://storage.googleapis.com/prodiction-bucket/diction_video_v2/</string>
    <string name="center_sub">This is a real-time communication relay service that allows hearing or speech impaired people who have difficulty using the phone to communicate freely over the phone.</string>
    <string name="call">Connect the phone</string>
    <string name="your_pron">| Your pronunciation video</string>
    <string name="correct_pron">| Correct pronunciation video</string>
    <string name="view_level">View Level</string>
    <string name="you_are">You are on the</string>
    <string name="next_level">Next Level</string>
    <string name="kr">Korean</string>
    <string name="en">English(US)</string>
    <string name="modify">Modify</string>
    <string name="change_age">Enter your new age and click the save button to update the information.</string>
    <string name="save">save</string>
    <string name="repro">Re-Pronounce</string>
    <string name="add">Add Voca</string>
    <string name="coach_0">➊ Record the sign language toward the camera</string>
    <string name="coach_1">➋ Listen to the recognized sign language by voice</string>
    <string name="coach_2">➌ Press the microphone button\nand convert what the other person says\ninto text</string>
    <string name="coach_3">➍ Check the sign language manual</string>
    <string name="coach_4">➎ Convey speech through the keyboard</string>
    <string name="etc">Etc.</string>
    <string name="delete_text">Are you sure you want to delete the word?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="view_pro">View Standard</string>


    <!--yet-->

    <!-- gesture -->

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum recognized results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum recognized results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the gesture recognizer.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_delegate">Delegate</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="real_spead">Pronounce at actual speed\nand check your pronunciation score.</string>
    <string name="slow_record">Click the icon and speak clearly and slowly.</string>
    <string name="standard">Standard</string>
    <string name="please_slow">Please pronounce syllable by syllable slowly and clearly.</string>
    <string name="please_again">Please record again.</string>
    <string name="record_success">Recording completed.</string>
    <string name="please_record">Please record it!</string>
    <string name="word_add">Word added.</string>
    <string name="word_already">Word already exists.</string>
    <string name="nim"></string>
    <string name="recent_search">Recent searches</string>
    <string name="delete_search">delete</string>
    <string name="addT">add</string>
    <string name="space">space</string>
    <string name="clear_one">clear one</string>
    <string name="clear_all">clear all</string>
    <string name="login_top">Log in and enjoy your personalized</string>
    <string name="login_left">‘Pro-Dicition’</string>
    <string name="login_right">learing</string>
    <string name="main_title">Pro - Diction</string>
    <string name="splash1_sub">Real-time communication\nwith non-disabled people\n(especially those who do not know sign language)\nis possible through sign language or text.</string>
    <string name="splash2_sub">Users can learn pronunciation\nby Level / by 가나다 / by Relevance, etc.</string>
    <string name="splash3_sub">While learning,\nyou can check the words\nyou have saved as favorites\nthrough the vocabulary book in My Menu.</string>
    <string name="next">Next</string>
    <string name="order1">가나다순</string>
    <string name="order2">Difficult</string>
    <string name="order3">Relevance</string>
</resources>