<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.OnBoarding1Activity"
    android:background="@color/white"
    android:paddingHorizontal="30dp" >

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_onboarding_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_1_title"
        android:textColor="@color/font"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="75dp"/>
    <TextView
        android:id="@+id/tv_onboarding_1_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_1_sub"
        android:textColor="@color/sub1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_1_title"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_1_title"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/edit_onboarding_1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="@+id/btn_onboarding_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        tools:ignore="SpeakableTextPresentCheck"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:textSize="30sp"
        android:paddingStart="20dp"/>

    <Button
        android:id="@+id/btn_onboarding_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/onboarding_1_btn"
        tools:textColor="#B9B9B9"
        android:textSize="17sp"
        android:enabled="false"
        tools:background="@drawable/bg_background_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>