<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.OnBoardingFinishActivity"
    android:background="@color/white"
    android:paddingHorizontal="30dp" >

    <TextView
        android:id="@+id/tv_onboarding_finish_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_2_title"
        android:textColor="@color/font"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="75dp"/>
    <TextView
        android:id="@+id/tv_onboarding_finish_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_finish"
        android:textColor="@color/sub1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_finish_title"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_finish_title"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_onboarding_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="You are on the 'Word'!"
        android:textColor="@color/main"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/tv_onboarding_finish_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text1"
        android:textColor="@color/main"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding_finish"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_finish"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_finish"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_onboarding_finish_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text2"
        android:textColor="@color/main"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding_finish"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_finish"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_finish_1" />

    <ImageView
        android:id="@+id/iv_onboarding_finish"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_main_logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_onboarding_finish"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_finish"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_finish_2" />

    <Button
        android:id="@+id/btn_onboarding_finish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/onboarding_finish_btn"
        android:textColor="@color/sub3"
        android:textSize="17sp"
        android:background="@drawable/bg_background_round_on"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>