<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.my.CallActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_phoneme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_phoneme"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/font" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/center_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_center_title"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/sub1"/>

    <Button
        android:id="@+id/btn_call_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:background="@drawable/bg_background_round_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>