<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.my.LanguageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_phoneme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_center_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_phoneme"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/font" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_center_title"
        tools:layout_editor_absoluteX="156dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/radio_ko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kr"
            android:textSize="17sp"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:background="#00ff0000"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:textAlignment="textStart"/>
        <Button
            android:id="@+id/radio_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en"
            android:textSize="17sp"
            android:textColor="@color/font"
            android:paddingVertical="10dp"
            android:background="#00ff0000"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="textStart"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>