<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.learn.phoneme.LearnPhonemeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_phoneme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phoneme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_1"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="@color/font"
        app:layout_constraintTop_toBottomOf="@+id/tb_phoneme"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_phoneme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@+id/tv_phoneme_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:tabTextColor="#49454F"
        app:tabSelectedTextColor="@color/font"
        app:tabIndicatorColor="@color/main"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consonant"
            android:textAllCaps="false" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vowels" />


    </com.google.android.material.tabs.TabLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_phoneme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tl_phoneme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>