<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onboarding.OnBoarding2_1Activity"
    android:background="@color/white" >

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/tv_onboarding_2_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_2_title"
        android:textColor="@color/font"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="75dp"

        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/tv_onboarding_2_sub_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Level.1"
        android:textColor="@color/sub1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv_onboarding_2_title_1"
        app:layout_constraintStart_toStartOf="@+id/tv_onboarding_2_title_1"
        android:layout_marginTop="10dp"/>


    <View
        android:id="@+id/iv_onboarding_2_1"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/sub3"
        app:layout_constraintBottom_toBottomOf="@+id/btn_onboarding_2_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <ImageButton
        android:id="@+id/btn_onboarding_2_1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/btn_listen"
        android:scaleType="centerCrop"
        android:enabled="true"
        android:background="#00ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="140dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_onboarding_2_1"
        app:layout_constraintStart_toStartOf="@+id/btn_onboarding_2_1"
        app:layout_constraintEnd_toEndOf="@+id/btn_onboarding_2_1"
        android:text="@string/onboarding_2_1_btn_text"
        android:textColor="@color/main"
        android:textSize="16sp"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/btn_next"
        android:scaleType="centerCrop"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>